# This file documents the revision history for Perl extension Catalyst.

        - Fix return value of $c->req->body, which delegates to the body
          method on the HTTP::Body of the request (t0m)
          - Test for this (t0m)
        - Fix calling $c->req->body from inside an overridden prepare_action
          method in a plugin, as used by Catalyst::Plugin::Server (t0m)
          - Test for this (t0m)
        - Fix assignment to Catalyst::Dispatcher's preload_dispatch_types and
          postload_dispatch_types attributes - assigning a list should later 
          return a listref. Fixes Catalyst::Plugin::Server. (t0m)
          - Tests for this (t0m)
        - Change streaming test to serve itself rather than 01use.t, making 
          test sync for engines easier (t0m)
        - Refactor capturing of $app from Catalyst::Controller into
          Catalyst::Component::Role::CaptureApp for easier reuse in other
          components (Florian Ragwitz)
        - Make the test suites YAML dependency optional (Florian Ragwitz)
        - Make debug output show class name for the engine and dispatcher
          rather than the stringified ref. (t0m)
        - Make MyApp immutable at the end of the scope after the setup
          method is called, fixing issues with plugins which have their 
          own new methods by inlining a constructor on MyApp (t0m)
          - Test for this and method modifiers in MyApp (t0m)
        - Fix Catalyst::Plugin::Authentication's authentication
          plugin backwards compatibility issues by fixing 
          Class::Data::Inheritable compatibility (t0m)
          - Test for this (t0m)
        - Fix bug causing Catalyst::Request::Upload's basename method
          to return undef (t0m)
          - Test for this (Carl Franks)
        - Fix loading of classes which do not define any symbols to not
          die, as it didn't in 5.70 (t0m)
          - Test for this (t0m)